--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
 	base = "frontend"
 	command = "netlify run build"
-	publish = "frontend/build"
-	functions = "frontend/function"
+	publish = "build"
+	functions = "function"
