--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,26 @@
 astroid==2.12.12
+certifi==2022.9.24
+charset-normalizer==2.1.1
 dill==0.3.6
 et-xmlfile==1.1.0
+idna==3.4
 isort==5.10.1
+jedi==0.18.1
 lazy-object-proxy==1.8.0
 mccabe==0.7.0
 numpy==1.23.4
 openpyxl==3.0.10
 pandas==1.5.1
+parso==0.8.3
 platformdirs==2.5.2
 pylint==2.15.5
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.6
+requests==2.28.1
 six==1.16.0
 tomli==2.0.1
 tomlkit==0.11.6
 typing-extensions==4.4.0
+urllib3==1.26.12
 wrapt==1.14.1
