--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.1.0"
+    "react-leaflet": "^4.1.0",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
