--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.15",
     "chart.js": "^3.9.1",
+    "fuse.js": "^6.6.2",
     "leaflet": "^1.9.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
@@ -22,6 +26,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
+    "prettier": "^2.8.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
   }
